Add styling and base of the blog

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,22 +2,11 @@
 
 {% block content %}
 
-<nav>
-    <li><a href="/posts/">posts</a></li>
-    <li><a href="/notes/">notes</a></li>
-    <li><a href="/wiki/">wiki</a></li>
-    <li><a href="/tags/">tags</a></li>
-</nav>
-
-<h1 class="title">
-    This is my blog made with Zola.
-</h1>
-
-
-<ul>
-    <li><a href="/posts/">posts</a></li>
-    <li><a href="/notes/">notes</a></li>
-    <li><a href="/wiki/">wiki</a></li>
-</ul>
+<div class="row justify-content-center">
+    <div class="col-md-4">
+        <h1 class="title">Mostly programming</h1>
+        <p>Programming, Bioinformatics, Data, Books, and More</p>
+    </div>
+</div>
 
 {% endblock content %}
