--- a/templates/tags/single.html
+++ b/templates/tags/single.html
@@ -2,10 +2,24 @@
 
 
 {% block content %}
-<h1>{{ term.pages | length }} pages tagged with "{{ term.name }}"</h1>
-<div class="taxonomy-container">
-    {% for page in term.pages %}
-    <li><a href="{{ page.permalink | safe }}">{{ page.title }}</a></li>
-    {% endfor %}
-</div>
+
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <h3>{{ term.pages | length }} pages tagged with "{{ term.name }}"</h3>
+
+        <div class="list-group list-group-flush">
+            {% for page in term.pages %}
+            <a class="list-group-item list-group-item-action" href="{{ page.permalink | safe }}">
+                {{ page.title }}
+                <div class="float-end">{{ page.date | date(format="%b %d, %Y") }}</div>
+            </a>
+            {% endfor %}
+        </div> <!-- list -->
+
+
+    </div> <!-- column -->
+</div> <!-- row -->
+
+
+
 {% endblock content %}
