--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
-  {{ section.title }}
-</h1>
-<ul>
-  {% for page in section.pages %}
-  <li><a href="{{ page.permalink | safe }}">{{ page.title }}</a></li>
-  {% endfor %}
-</ul>
+
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <h3 class="title">{{ section.title }}</h3>
+
+        <div class="list-group list-group-flush">
+            {% for page in section.pages %}
+            <a class="list-group-item list-group-item-action" href="{{ page.permalink | safe }}">
+                {{ page.title }}
+                <div class="float-end">{{ page.date | date(format="%b %d, %Y") }}</div>
+            </a>
+            {% endfor %}
+        </div>  <!-- list -->
+    </div>  <!-- column -->
+</div>  <!-- row -->
+
+
+
 {% endblock content %}
