--- a/templates/tags/list.html
+++ b/templates/tags/list.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="taxonomy-name">{{ taxonomy.name }}</h1>
-<div class="taxonomy-container">
-    {% for term in terms %}
-    <div class="term">
-        <a href="{{ term.permalink }}">{{ term.name }} ({{ term.pages | length }})</a>
+
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <h3>Tags</h3>
+        <!-- <h3>{{ taxonomy.name }}</h3> -->
+
+        <div class="list-group list-group-flush">
+            {% for term in terms %}
+            <a class="list-group-item list-group-item-action"  href="{{ term.permalink }}">{{ term.name }} ({{ term.pages | length }})</a>
+            {% endfor %}
+        </div>  <!-- list -->
+
     </div>
-    {% endfor %}
 </div>
+
 {% endblock content %}
