--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-8">
+            <h3 class="title">About</h3>
             {{ page.content | safe }}
         </div>
     </div>
