--- a/templates/404.html
+++ b/templates/404.html
@@ -4,8 +4,8 @@
 
 <div class="row justify-content-center">
     <div class="col-md-4">
-        <h1 class="title">Mostly Programming</h1>
-        <p>Programming, Bioinformatics, Data, Books, and More</p>
+        <h1 class="title">Page Not Found</h1>
+        <p><a href="/">Click me to go to the home page</a></p>
     </div>
 </div>
 
