--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,34 @@
 .margin-vertical-20 {
     margin: 30px 0 0 0
 }
+
+#post-title {
+    margin-bottom: 0.5em;
+    font-size: 45px;
+}
+
+#post-metadata {
+    margin-bottom: 5em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 2.0em;
+}
+
+body, .list-group-item {
+    color: #bdc1c6;
+    background-color: #202124;
+}
+
+.list-group-item {
+    border: 1px solid #444;
+}
+
+a {
+    color: #6495ED;
+}
+
+footer {
+    bottom: 0;
+    margin-top: 15em;
+}
