--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
               crossorigin="anonymous"
         >
 
+        
+
         <link rel="stylesheet" href="{{  get_url(path="style.css") }}">
 
         <title>Mostly Programming</title>
@@ -42,5 +44,17 @@
         </div>
 
     </body>
+
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <p class="p-copyright">
+                        All work is under the <a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License, Version 1.3</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </html>
