--- a/templates/post-page.html
+++ b/templates/post-page.html
@@ -2,34 +2,37 @@
 
 {% block content %}
 
-<div class="row justify-content-center">
-    <div class="col-md-10">  <!-- start post heading -->
-        
+<div class="row">
+    <div class="row justify-content-end"> <!-- start post heading -->
+        <div class="col-md-10">
 
-        <div class="float-end">
-            {{ page.date | date(format="%B %d, %Y") }}
+            <h1 id="post-title">{{ page.title }}</h1>
 
-            <p>
-                {% if page.taxonomies.tags %}
-                Tags:
-                <span class="tags">
-                    {% for tag in page.taxonomies.tags %}
-                    <button type="button" class="btn btn-link">
-                        <a href="{{ get_taxonomy_url(kind="tags", name=tag) }}">{{ tag }}</a>
-                    </button>
-                    {% endfor %}
-                </span>
-                {% endif %}
-            </p>
+            <div id="post-metadata">
+                {{ page.date | date(format="%B %d, %Y") }}
 
-        </div> <!-- page metadata -->
+                <p>
+                    {% if page.taxonomies.tags %}
+                    Tags:
+                    <span class="tags">
+                        {% for tag in page.taxonomies.tags %}
+                        <button type="button" class="btn btn-link btn-sm">
+                            <a href="{{ get_taxonomy_url(kind="tags", name=tag) }}">{{ tag }}</a>
+                        </button>
+                        {% endfor %}
+                    </span>
+                    {% endif %}
+                </p>
 
-        <h1 class="title">{{ page.title }}</h1>
+            </div> <!-- page metadata -->
+        </div>
     </div> <!-- end post heading -->
 
-    <div class="col-md-8"> <!-- start post content -->
-        {{ page.content | safe }}
-    </div> <!-- end post content -->
+    <div class="row justify-content-center">  <!-- start post content -->
+        <div class="col-md-8">
+            {{ page.content | safe }}
+        </div>
+    </div>  <!-- end post content -->
 
 </div> <!--  -->
 
