--- a/templates/post-page.html
+++ b/templates/post-page.html
@@ -6,6 +6,8 @@
     <div class="row justify-content-end"> <!-- start post heading -->
         <div class="col-md-10">
 
+
+            <div id="title-and-metadata">
             <h1 id="post-title">{{ page.title }}</h1>
 
             <div id="post-metadata">
@@ -13,10 +15,10 @@
 
                 <p>
                     {% if page.taxonomies.tags %}
-                    Tags:
-                    <span class="tags">
+                    <span>
+                        Tags:
                         {% for tag in page.taxonomies.tags %}
-                        <button type="button" class="btn btn-link btn-sm">
+                        <button type="button" class="btn btn-link small-button">
                             <a href="{{ get_taxonomy_url(kind="tags", name=tag) }}">{{ tag }}</a>
                         </button>
                         {% endfor %}
@@ -25,6 +27,7 @@
                 </p>
 
             </div> <!-- page metadata -->
+            </div> <!-- title-and-metadata -->
         </div>
     </div> <!-- end post heading -->
 
