--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,11 @@
 /* Fonts */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans|Noto+Serif+SC:100,300,300italic,400,400italic,600,700,700italic);
 
-html,
-body {
+html, body {
     font-size: 100%;
     font-family: 'Noto Serif SC', sans-serif;
+    background-color: #202124;
+    color: #bdc1c6;
 }
 
 body, .list-group-item {
@@ -12,23 +13,45 @@ body, .list-group-item {
     background-color: #202124;
 }
 
-.margin-vertical-20   { margin: 30px 0 0 0 }
+.margin-vertical-20 {
+    margin: 30px 0 0 0
+}
 
 #post-title   {
     margin-bottom: 0.5em;
     font-size: 45px;
 }
 
-#post-metadata   { margin-bottom: 5em; }
+#title-and-metadata {
+    margin-bottom: 5em;
+}
 
-h1, h2, h3, h4, h5, h6   { margin-top: 2.0em; }
+#post-metadata, .small-button   {
+    font-size: 95%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 2.0em;
+}
+
+/* colors */
+.bg-dark {
+    background-color: rgb(28, 30, 31) !important;
+}
 
 
 /* Code Blocks*/
 pre		{ padding: 20px; }
 
 /* Lists */
-.list-group-item   { border: 1px solid #444; }
+.list-group-item {
+    border: 1px solid rgb(60, 65, 68);
+}
+
+.list-group-item-dark.list-group-item-action:focus, .list-group-item-dark.list-group-item-action:hover {
+    color: rgb(218, 215, 210);
+    background-color: rgb(60, 65, 68);
+}
 
 /* Links */
 
